--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = dict.keys(cities)\n",
+    "pyeongchang_keys = dict.keys('cities)\n",
     "                            \n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
     "type(pyeongchang_keys) # list"
