--- a/index.ipynb
+++ b/index.ipynb
@@ -442,7 +442,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = dict.values('cities')\n",
+    "pyeongchang_values = dict.values(cities)\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
    ]
