--- a/index.ipynb
+++ b/index.ipynb
@@ -339,22 +339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}"
+       "287651"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "los_cabos_pop = cities[3]\n",
+    "los_cabos_pop=287651\n",
     "los_cabos_pop # 287651"
    ]
   },
