--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = dict.values(cities[11])\n",
+    "pyeongchang_values = listdict.values(cities[11])\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
    ]
